--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Two Phase Commit Protocol Project
 Advanced Distributed Systems - CSCI 8780
 Fall 2015
-Michael Bottone and Anumita Srivastava
+Michael Bottone
 
 Description:
 
